added list item to test

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li>Item (5 out of 5 stars)</li>
         <li>Item (5 out of 5 stars)</li>
         <li>Item (5 out of 5 stars)</li>
+        <li>Item (5 out of 5 stars)</li>
     </ol>
 </article>
 </body>
