--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>The Best Books I've Read in 2022 (So Far)</title>
     <style>
         body {
