added first draft of content

--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
             text-decoration: underline;
         }
         </style>
-    <nav><a href="https://app.thestorygraph.com/profile/csalek">Check out my StoryGraph!</a></nav>
+    <nav><a href="https://app.thestorygraph.com/profile/csalek">Add me on StoryGraph</a></nav>
 </head>
 
 <body>
 <h1>The Best Books I've Read in 2022 (So Far)</h1>
 <article>
-    <p>This year, I set a goal to read 75 books...</p></article>
+    <p>At the end of last year, I set a goal to read 75 books in 2022. Accompanying my goal was a "reading resolution" to try to read at least half an hour a day. Since most of my reading takes place in spurts — i.e. I'll read five books in a row and then not read for a month – I wanted to try to make my reading more consistent. As of this writing, I am behind on my goal (thanks, grad school!) but still intend to hit 75 books by December 31.</p></article>
 
 <h2>The Books</h2>
 <article>
-    <p>I rated each book on a five-star scale...</p>
-    <p>And here are the books:</p>
+    <p>Of the books I've read so far, these are my five favorites in no particular order. I rated each book on a five-star scale, going to quarter stars if needed.</p>
+    <p>Here are the five best books I've read in 2022:</p>
     <ol>
-        <li>Item (5 out of 5 stars)</li>
-        <li>Item (5 out of 5 stars)</li>
-        <li>Item (5 out of 5 stars)</li>
-        <li>Item (5 out of 5 stars)</li>
+        <li><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i>, by John Green (4.5 out of 5 stars)</li>
+        <li><i>The Giver: The Graphic Novel</i>, adapted and illustrated by P. Craig Russell (4.5 out of 5 stars)</li>
+        <li><i>When Breath Becomes Air</i>, by Paul Kalanithi (4 out of 5 stars)</li>
+        <li><i>Loveless</i>, by Alice Oseman (4.5 out of 5 stars)</li>
+        <li><i>We Are Never Meeting in Real Life</i>, by Samantha Irby (4.25 out of 5 stars)</li>
     </ol>
 </article>
 </body>
