added like one word

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <h2>The Books</h2>
 <article>
-    <p>Of the books I've read so far, these are my five favorites in no particular order. I rated each book on a five-star scale, going to quarter stars if needed.</p>
+    <p>Of the books I've read so far this year, these are my five favorites in no particular order. I rated each book on a five-star scale, going to quarter stars if needed.</p>
     <p>Here are the five best books I've read in 2022:</p>
     <ol>
         <li><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i>, by John Green (4.5 out of 5 stars)</li>
