--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     <p>Of the books I've read so far this year, these are my five favorites in no particular order. I rated each book on a five-star scale, going to quarter stars if needed.</p>
     <p>Here are the five best books I've read in 2022:</p>
     <ol>
-        <li><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i>, by John Green (4.5 out of 5 stars)</li>
-        <li><i>The Giver: The Graphic Novel</i>, adapted and illustrated by P. Craig Russell (4.5 out of 5 stars)</li>
-        <li><i>When Breath Becomes Air</i>, by Paul Kalanithi (4 out of 5 stars)</li>
-        <li><i>Loveless</i>, by Alice Oseman (4.5 out of 5 stars)</li>
-        <li><i>We Are Never Meeting in Real Life</i>, by Samantha Irby (4.25 out of 5 stars)</li>
+        <li><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i>, by John Green <b>(4.5 out of 5 stars)></b></li>
+        <li><i>The Giver: The Graphic Novel</i>, adapted and illustrated by P. Craig Russell <b>(4.5 out of 5 stars)</b></li>
+        <li><i>When Breath Becomes Air</i>, by Paul Kalanithi <b>(4 out of 5 stars)</b></li>
+        <li><i>Loveless</i>, by Alice Oseman <b>(4.5 out of 5 stars)</b></li>
+        <li><i>We Are Never Meeting in Real Life</i>, by Samantha Irby <b>(4.25 out of 5 stars)</b></li>
     </ol>
 </article>
 </body>
