--- a/index.html
+++ b/index.html
@@ -32,19 +32,20 @@
 <body>
 <h1>The Best Books I've Read in 2022 (So Far)</h1>
 <article>
-    <p>At the end of last year, I set a goal to read 75 books in 2022. Accompanying my goal was a "reading resolution" to try to read at least half an hour a day. Since most of my reading takes place in spurts — i.e. I'll read five books in a row and then not read for a month – I wanted to try to make my reading more consistent. As of this writing, I am behind on my goal (thanks, grad school!) but still intend to hit 75 books by December 31.</p></article>
+    <p>At the end of last year, I set a goal to read 75 books in 2022. Accompanying my goal was a "reading resolution" to try to read at least half an hour a day. Since most of my reading takes place in spurts — i.e. I'll read five books in a row and then not read for a month – I wanted to try to make my reading more consistent. As of this writing, I am behind on my goal (thanks, grad school!) but still intend to hit 75 books by December 31.</p>
+</article>
 
 <h2>The Books</h2>
 <article>
     <p>Of the books I've read so far this year, these are my five favorites in no particular order. I rated each book on a five-star scale, going to quarter stars if needed.</p>
     <p>Here are the five best books I've read in 2022:</p>
-    <ol>
+    <ul>
         <li><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i>, by John Green <b>(4.5 out of 5 stars)</b></li>
         <li><i>The Giver: The Graphic Novel</i>, adapted and illustrated by P. Craig Russell <b>(4.5 out of 5 stars)</b></li>
         <li><i>When Breath Becomes Air</i>, by Paul Kalanithi <b>(4 out of 5 stars)</b></li>
         <li><i>Loveless</i>, by Alice Oseman <b>(4.5 out of 5 stars)</b></li>
         <li><i>We Are Never Meeting in Real Life</i>, by Samantha Irby <b>(4.25 out of 5 stars)</b></li>
-    </ol>
+    </ul>
 </article>
 </body>
 
