--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 <h2>The Books</h2>
 <article>
-    <p>Of the books I've read so far this year, these are my five favorites in no particular order. I rated each book on a five-star scale, going to quarter stars if needed.</p>
-    <p>Here are the five best books I've read in 2022:</p>
+    <p>Of the books I've read so far this year, these are five of my favorites in no particular order. I rated each book on a five-star scale, going to quarter stars if needed.</p>
+    <p>Here are five of the best books I've read in 2022 (so far):</p>
     <ul>
         <li><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i>, by John Green <b>(4.5 out of 5 stars)</b></li>
         <li><i>The Giver: The Graphic Novel</i>, adapted and illustrated by P. Craig Russell <b>(4.5 out of 5 stars)</b></li>
