added lang, rearranged article

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -30,13 +30,13 @@
 </head>
 
 <body>
-<h1>The Best Books I've Read in 2022 (So Far)</h1>
 <article>
+<h1>The Best Books I've Read in 2022 (So Far)</h1>
     <p>At the end of last year, I set a goal to read 75 books in 2022. Accompanying my goal was a "reading resolution" to try to read at least half an hour a day. Since most of my reading takes place in spurts — i.e. I'll read five books in a row and then not read for a month – I wanted to try to make my reading more consistent. As of this writing, I am behind on my goal (thanks, grad school!) but still intend to hit 75 books by December 31.</p>
 </article>
 
-<h2>The Books</h2>
 <article>
+<h2>The Books</h2>
     <p>Of the books I've read so far this year, these are five of my favorites in no particular order. I rated each book on a five-star scale, going to quarter stars if needed.</p>
     <p>Here are five of the best books I've read in 2022 (so far):</p>
     <ul>
