added stylesheet and moved around html

--- a/index.html
+++ b/index.html
@@ -1,41 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"> 
 <meta charset="UTF-8">
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+
+<head>
     <title>The Best Books I've Read in 2022 (So Far)</title>
-    <style>
-        body {
-            border: 10px solid #0b0d95;
-            padding: 34px;
-        }
-        h1, h2 {
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
-        p, li {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        a {
-            font-family: Arial, Helvetica, sans-serif;
-            font-weight: bold;
-            text-decoration: none;
-            color:#727272;
-        }
-        a:hover {
-            color:#000000;
-            text-decoration: underline;
-        }
-        </style>
-    <nav><a href="https://app.thestorygraph.com/profile/csalek">Add me on StoryGraph</a></nav>
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
 </head>
 
 <body>
+    <nav><a href="https://app.thestorygraph.com/profile/csalek">Add me on StoryGraph</a></nav>
+<section>
     <h1>The Best Books I've Read in 2022 (So Far)</h1>
-<article>
     <p>At the end of last year, I set a goal to read 75 books in 2022. Accompanying my goal was a "reading resolution" to try to read at least half an hour a day. Since most of my reading takes place in spurts — i.e. I'll read five books in a row and then not read for a month – I wanted to try to make my reading more consistent. As of this writing, I am behind on my goal (thanks, grad school!) but still intend to hit 75 books by December 31.</p>
-</article>
+</section>
 
-<article>
+<section>
 <h2>The Books</h2>
     <p>Of the books I've read so far this year, these are five of my favorites in no particular order. I rated each book on a five-star scale, going to quarter stars if needed.</p>
     <p>Here are five of the best books I've read in 2022 (so far):</p>
@@ -46,7 +26,7 @@
         <li><i>Loveless</i>, by Alice Oseman <b>(4.5 out of 5 stars)</b></li>
         <li><i>We Are Never Meeting in Real Life</i>, by Samantha Irby <b>(4.25 out of 5 stars)</b></li>
     </ul>
-</article>
+</section>
 </body>
 
 </html>
