moved meta tags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<link rel = "stylesheet" type = "text/css" href = "style.css">
 
 <head>
     <title>The Best Books I've Read in 2022 (So Far)</title>
+    <meta charset="UTF-8">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 
 <section>
 <h2>The Books</h2>
-    <p>Of the books I've read so far this year, these are five of my favorites in no particular order. I rated each book on a five-star scale, going to quarter stars if needed.</p>
+    <p>Of the books I've read so far this year, these are five of my favorites in no particular order. This year, I'm pleased to have read a greater diversity of types of books — that is, while I typically read exclusively young adult or graphic novels, I am reading much more nonfiction this year. I rated each book on a five-star scale, going to quarter stars if needed.</p>
     <p>Here are five of the best books I've read in 2022 (so far):</p>
     <ul>
         <li><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i>, by John Green <b>(4.5 out of 5 stars)</b></li>
