minor edits for assignment 2, added images

--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
 <section>
 <h2>The Books</h2>
     <p>Of the books I've read so far this year, these are five of my favorites in no particular order. This year, I'm pleased to have read a greater diversity of types of books — that is, while I typically read exclusively young adult or graphic novels, I am reading much more nonfiction this year. I rated each book on a five-star scale, going to quarter stars if needed.</p>
-    <p>Here are five of the best books I've read in 2022 (so far):</p>
+    <p>Here are five of the best books I've read in 2022 (so far), with links to each book's page on Goodreads:</p>
+    <img src="images/the-anthropocene-reviewed.jpg" alt="The Anthropocene Reviewed book cover" height="150px"> <img src="images/the-giver-graphic-novel.jpg" alt="The Giver: The Graphic Novel book cover" height="150px"> <img src="images/when-breath-becomes-air.jpg" alt="When Breath Becomes Air book cover" height="150px"> <img src="images/loveless.jpg" alt="Loveless book cover" height="150px"> <img src="images/we-are-never-meeting-in-real-life.jpg" alt="We Are Never Meeting in Real Life book cover" height="150px">
     <ul>
-        <li><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i>, by John Green <b>(4.5 out of 5 stars)</b></li>
-        <li><i>The Giver: The Graphic Novel</i>, adapted and illustrated by P. Craig Russell <b>(4.5 out of 5 stars)</b></li>
-        <li><i>When Breath Becomes Air</i>, by Paul Kalanithi <b>(4 out of 5 stars)</b></li>
-        <li><i>Loveless</i>, by Alice Oseman <b>(4.5 out of 5 stars)</b></li>
-        <li><i>We Are Never Meeting in Real Life</i>, by Samantha Irby <b>(4.25 out of 5 stars)</b></li>
+        <li><a href="https://www.goodreads.com/book/show/55145261-the-anthropocene-reviewed"><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i></a>, by John Green <b>(4.5 out of 5 stars)</b></li>
+        <li><a href="https://www.goodreads.com/book/show/40796210-the-giver"><i>The Giver: The Graphic Novel</i></a>, adapted and illustrated by P. Craig Russell <b>(4.5 out of 5 stars)</b></li>
+        <li><a href="https://www.goodreads.com/book/show/25614898-when-breath-becomes-air"><i>When Breath Becomes Air</i></a>, by Paul Kalanithi <b>(4 out of 5 stars)</b></li>
+        <li><a href="https://www.goodreads.com/book/show/55977956-loveless"><i>Loveless</i></a>, by Alice Oseman <b>(4.5 out of 5 stars)</b></li>
+        <li><a href="https://www.goodreads.com/book/show/33381433-we-are-never-meeting-in-real-life"><i>We Are Never Meeting in Real Life</i></a>, by Samantha Irby <b>(4.25 out of 5 stars)</b></li>
     </ul>
 </section>
 </body>
 
 </html>
 
-<!-- Something about clicking on each book to get to a new page, where there is an image of the book. -->
+<!-- TO ADD: Something about clicking on each book to get to a new page, where there is an image of the book. -->
