removed responsive class

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 <h2>The Books</h2>
     <p>Of the books I've read so far this year, these are five of my favorites in no particular order. This year, I'm pleased to have read a greater diversity of types of books — that is, while I typically read exclusively young adult or graphic novels, I am reading much more nonfiction this year. I rated each book on a five-star scale, going to quarter stars if needed.</p>
     <p>Here are five of the best books I've read in 2022 (so far), with links to each book's page on Goodreads:</p>
-    <img src="images/the-anthropocene-reviewed.jpg" alt="The Anthropocene Reviewed book cover" height="150px"> <img src="images/the-giver-graphic-novel.jpg" alt="The Giver: The Graphic Novel book cover" height="150px"> <img src="images/when-breath-becomes-air.jpg" alt="When Breath Becomes Air book cover" height="150px"> <img src="images/loveless.jpg" alt="Loveless book cover" height="150px"> <img src="images/we-are-never-meeting-in-real-life.jpg" alt="We Are Never Meeting in Real Life book cover" height="150px">
+    <img src="images/the-anthropocene-reviewed.jpg" alt="The Anthropocene Reviewed book cover" height="150px"> 
+    <img src="images/the-giver-graphic-novel.jpg" alt="The Giver: The Graphic Novel book cover" height="150px"> 
+    <img src="images/when-breath-becomes-air.jpg" alt="When Breath Becomes Air book cover" height="150px"> 
+    <img src="images/loveless.jpg" alt="Loveless book cover" height="150px"> 
+    <img src="images/we-are-never-meeting-in-real-life.jpg" alt="We Are Never Meeting in Real Life book cover" height="150px">
     <ul>
         <li><a href="https://www.goodreads.com/book/show/55145261-the-anthropocene-reviewed"><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i></a>, by John Green <b>(4.5 out of 5 stars)</b></li>
         <li><a href="https://www.goodreads.com/book/show/40796210-the-giver"><i>The Giver: The Graphic Novel</i></a>, adapted and illustrated by P. Craig Russell <b>(4.5 out of 5 stars)</b></li>
