--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>The Best Books I've Read in 2022 (So Far)</title>
     <meta charset="UTF-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <link rel = "stylesheet" type = "text/css" href = "style.css">
+    <link rel = "stylesheet" type = "text/css" href = "home/css/style.css">
 </head>
 
 <body>
