reset homepage to original with link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>The Best Books I've Read in 2022 (So Far)</title>
     <meta charset="UTF-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <link rel = "stylesheet" type = "text/css" href = "home/css/style.css">
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
 </head>
 
 <body>
@@ -18,15 +18,15 @@
 <section>
 <h2>The Books</h2>
     <p>Of the books I've read so far this year, these are five of my favorites in no particular order. This year, I'm pleased to have read a greater diversity of types of books — that is, while I typically read exclusively young adult or graphic novels, I am reading much more nonfiction this year. I rated each book on a five-star scale, going to quarter stars if needed.</p>
-    <p>Here are five of the best books I've read in 2022 (so far). Click each book to learn more:</p>
+    <p>Here are five of the best books I've read in 2022 (so far):</p>
     <ul>
-        <li><a href="books/the-anthropocene-reviewed.html"><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i></a>, by John Green <b>(4.5 out of 5 stars)</b></li>
-        <li><a href="books/the-giver-graphic-novel.html"><i>The Giver: The Graphic Novel</i></a>, adapted and illustrated by P. Craig Russell <b>(4.5 out of 5 stars)</b></li>
-        <li><a href="books/when-breath-becomes-air.html"><i>When Breath Becomes Air</i></a>, by Paul Kalanithi <b>(4 out of 5 stars)</b></li>
-        <li><a href="books/loveless.html"><i>Loveless</i></a>, by Alice Oseman <b>(4.5 out of 5 stars)</b></li>
-        <li><a href="books/we-are-never-meeting-in-real-life.html"><i>We Are Never Meeting in Real Life</i></a>, by Samantha Irby <b>(4.25 out of 5 stars)</b></li>
+        <li><i>The Anthropocene Reviewed: Essays on a Human-Centered Planet</i>, by John Green <b>(4.5 out of 5 stars)</b></li>
+        <li><i>The Giver: The Graphic Novel</i>, adapted and illustrated by P. Craig Russell <b>(4.5 out of 5 stars)</b></li>
+        <li><i>When Breath Becomes Air</i>, by Paul Kalanithi <b>(4 out of 5 stars)</b></li>
+        <li><i>Loveless</i>, by Alice Oseman <b>(4.5 out of 5 stars)</b></li>
+        <li><i>We Are Never Meeting in Real Life</i>, by Samantha Irby <b>(4.25 out of 5 stars)</b></li>
     </ul>
-    <p>Read more about each book and see the covers <a href="books.html" target="_blank">by clicking here.</a></p>
+    <p>Read more about each book and see the covers <a href="books.html">by clicking here.</a></p>
 </section>
 </body>
 
