added books and formatted page

--- a/books.html
+++ b/books.html
@@ -12,7 +12,21 @@
     <nav><a href="https://app.thestorygraph.com/profile/csalek">Add me on StoryGraph</a></nav>
 <section>
     <h1>The Best Books I've Read in 2022 (So Far)</h1>
-    <p>At the end of last year, I set a goal to read 75 books in 2022. Accompanying my goal was a "reading resolution" to try to read at least half an hour a day. Since most of my reading takes place in spurts — i.e. I'll read five books in a row and then not read for a month – I wanted to try to make my reading more consistent. As of this writing, I am behind on my goal (thanks, grad school!) but still intend to hit 75 books by December 31.</p>
+    <h2>The Anthropocene Reviewed: Essays on a Human-Centered Planet</h2>
+        <img src="images/the-anthropocene-reviewed.jpg" alt="The Anthropocene Reviewed book cover">
+        <p>About this book.</p>
+    <h2>The Giver: The Graphic Novel</h2>
+        <img src="images/the-giver-graphic-novel.jpg" alt="The Giver: The Graphic Novel book cover">
+        <p>About this book.</p>
+    <h2>When Breath Becomes Air</h2>
+        <img src="images/when-breath-becomes-air.jpg" alt="When Breath Becomes Air book cover">
+        <p>About this book.</p>
+    <h2>Loveless</h2>
+        <img src="images/loveless.jpg" alt="Loveless book cover">
+        <p>About this book.</p>
+    <h2>We Are Never Meeting in Real Life</h2>
+        <img src="images/we-are-never-meeting-in-real-life.jpg" alt="We Are Never Meeting in Real Life book cover">
+        <p>About this book.</p>
 </section>
 </body>
 
