--- a/books.html
+++ b/books.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav><a href="https://app.thestorygraph.com/profile/csalek">Add me on StoryGraph</a></nav>
+    <nav><a href="index.html">Home</a><br><br><a href="https://app.thestorygraph.com/profile/csalek">Add me on StoryGraph</a></nav>
 <section>
     <h1>The Best Books I've Read in 2022 (So Far)</h1>
     <h2>The Anthropocene Reviewed: Essays on a Human-Centered Planet</h2>
