fixed floating issue

--- a/books.html
+++ b/books.html
@@ -2,32 +2,30 @@
 <html lang="en">
 
 <head>
-    <title>The Best Books I've Read in 2022 (So Far)</title>
+    <title>The Books — The Best Books I've Read in 2022 (So Far)</title>
     <meta charset="UTF-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel = "stylesheet" type = "text/css" href = "style.css">
 </head>
 
 <body>
-    <nav><a href="index.html">Home</a><br><br><a href="https://app.thestorygraph.com/profile/csalek">Add me on StoryGraph</a></nav>
-<section>
+    <nav><a href="index.html">Home</a> — <a href="books.html">The Books</a> — <a href="https://app.thestorygraph.com/profile/csalek">Add me on StoryGraph</a></nav>
     <h1>The Best Books I've Read in 2022 (So Far)</h1>
     <h2>The Anthropocene Reviewed: Essays on a Human-Centered Planet</h2>
         <img src="images/the-anthropocene-reviewed.jpg" alt="The Anthropocene Reviewed book cover">
-        <p>About this book.</p>
+        <p>About the book.</p>
     <h2>The Giver: The Graphic Novel</h2>
         <img src="images/the-giver-graphic-novel.jpg" alt="The Giver: The Graphic Novel book cover">
-        <p>About this book.</p>
+        <p>About the book.</p>
     <h2>When Breath Becomes Air</h2>
         <img src="images/when-breath-becomes-air.jpg" alt="When Breath Becomes Air book cover">
-        <p>About this book.</p>
+        <p>About the book.</p>
     <h2>Loveless</h2>
         <img src="images/loveless.jpg" alt="Loveless book cover">
-        <p>About this book.</p>
+        <p>About the book.</p>
     <h2>We Are Never Meeting in Real Life</h2>
         <img src="images/we-are-never-meeting-in-real-life.jpg" alt="We Are Never Meeting in Real Life book cover">
-        <p>About this book.</p>
-</section>
+        <p>About the book.</p>
 </body>
 
 </html>
