--- a/books.html
+++ b/books.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <nav><a href="index.html">Home</a> — <a href="books.html">The Books</a> — <a href="https://app.thestorygraph.com/profile/csalek">Add me on StoryGraph</a></nav>
+    <nav><b>NAVIGATION</b><br><a href="index.html">Home</a><br>
+        <a href="books.html">The Books</a><br>
+        <a href="https://app.thestorygraph.com/profile/csalek">My StoryGraph</a></nav>
     <h1>The Best Books I've Read in 2022 (So Far)</h1>
     <h2>The Anthropocene Reviewed: Essays on a Human-Centered Planet</h2>
         <img src="images/the-anthropocene-reviewed.jpg" alt="The Anthropocene Reviewed book cover">
