--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <nav><a href="index.html">Home</a> — <a href="books.html">The Books</a> — <a href="https://app.thestorygraph.com/profile/csalek">Add me on StoryGraph</a></nav>
+    <nav><b>NAVIGATION</b><br><a href="index.html">Home</a><br>
+        <a href="books.html">The Books</a><br>
+        <a href="https://app.thestorygraph.com/profile/csalek">My StoryGraph</a></nav>
 <section>
     <h1>The Best Books I've Read in 2022 (So Far)</h1>
     <p>At the end of last year, I set a goal to read 75 books in 2022. Accompanying my goal was a "reading resolution" to try to read at least half an hour a day. Since most of my reading takes place in spurts — i.e. I'll read five books in a row and then not read for a month – I wanted to try to make my reading more consistent. As of this writing, I am behind on my goal (thanks, grad school!) but still intend to hit 75 books by December 31.</p>
@@ -29,7 +31,6 @@
     <p>Read more about each book and see the covers <a href="books.html">by clicking here.</a></p>
 </section>
 
-<box>Add me on StoryGraph!</box>
 </body>
 
 </html>
