--- a/books.html
+++ b/books.html
@@ -9,25 +9,31 @@
 </head>
 
 <body>
-    <nav><b>NAVIGATION</b><br><a href="index.html">Home</a><br>
-        <a href="books.html">The Books</a><br>
+    <nav><b>NAVIGATION:</b> <a href="index.html">Home</a> • 
+        <a href="books.html">The Books</a> • 
         <a href="https://app.thestorygraph.com/profile/csalek">My StoryGraph</a></nav>
+
     <h1>The Best Books I've Read in 2022 (So Far)</h1>
+
     <h2>The Anthropocene Reviewed: Essays on a Human-Centered Planet</h2>
         <img src="images/the-anthropocene-reviewed.jpg" alt="The Anthropocene Reviewed book cover">
-        <p>About the book.</p>
+        <p>"In this remarkable symphony of essays adapted and expanded from his groundbreaking podcast, bestselling author John Green reviews different facets of the human-centered planet on a five-star scale—from the QWERTY keyboard and sunsets to Canada geese and <em>Penguins of Madagascar</em>." <a href="https://www.penguinrandomhouse.com/books/672554/the-anthropocene-reviewed-by-john-green/">(read more from the publisher)</a></p>
+
     <h2>The Giver: The Graphic Novel</h2>
         <img src="images/the-giver-graphic-novel.jpg" alt="The Giver: The Graphic Novel book cover">
-        <p>About the book.</p>
+        <p>"Now in graphic novel format, Lois Lowry's Newbery Medal-winning classic story of a young boy discovering the dark secrets behind his seemingly ideal world is accompanied by renowned artist P. Craig Russell's beautifully haunting illustrations." <a href="https://www.harpercollins.com/products/the-giver-graphic-novel-lois-lowry?variant=39935117492258">(read more from the publisher)</a></p>
+
     <h2>When Breath Becomes Air</h2>
         <img src="images/when-breath-becomes-air.jpg" alt="When Breath Becomes Air book cover">
-        <p>About the book.</p>
+        <p>"What makes life worth living in the face of death? What do you do when the future, no longer a ladder toward your goals in life, flattens out into a perpetual present? What does it mean to have a child, to nurture a new life as another fades away? These are some of the questions Kalanithi wrestles with in this profoundly moving, exquisitely observed memoir." <a href="http://www.randomhousebooks.com/books/258507/">(read more from the publisher)</a></p>
+
     <h2>Loveless</h2>
         <img src="images/loveless.jpg" alt="Loveless book cover">
-        <p>About the book.</p>
-    <h2>We Are Never Meeting in Real Life</h2>
-        <img src="images/we-are-never-meeting-in-real-life.jpg" alt="We Are Never Meeting in Real Life book cover">
-        <p>About the book.</p>
-</body>
+        <p>"From the marvelous author of <em>Heartstopper</em> comes an exceptional YA novel about discovering that it's okay if you don't have sexual or romantic feelings for anyone ... since there are plenty of other ways to find love and connection." <a href="https://shop.scholastic.com/teachers-ecommerce/teacher/books/loveless-9781338751932.html">(read more from the publisher)</a></p>
 
+    <h2>We Are Never Meeting in Real Life.</h2>
+        <img src="images/we-are-never-meeting-in-real-life.jpg" alt="We Are Never Meeting in Real Life book cover">
+        <p>"Whether Samantha Irby is talking about how her difficult childhood has led to a problem in making “adult” budgets; explaining why she should be the new Bachelorette (she's “35-ish, but could easily pass for 60-something”); detailing a disastrous pilgrimage-slash-romantic-vacation to Nashville to scatter her estranged father's ashes; sharing awkward sexual encounters; or dispensing advice on how to navigate friendships with former drinking buddies who are now suburban moms (hang in there for the Costco loot!); she's as deft at poking fun at the ghosts of her past self as she is at capturing powerful emotional truths." <a href="https://www.penguinrandomhouse.com/books/253047/we-are-never-meeting-in-real-life-by-samantha-irby/">(read more from the publisher)</a></p>
+<br><br><br>
+</body>
 </html>
