--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <nav><b>NAVIGATION:</b> <a href="index.html">Home</a> • 
+    <nav><b>NAVIGATION:</b><br>
+        <a href="index.html">Home</a> • 
         <a href="books.html">The Books</a> • 
         <a href="https://app.thestorygraph.com/profile/csalek">My StoryGraph</a></nav>
 
