--- a/index.html
+++ b/index.html
@@ -9,30 +9,40 @@
 </head>
 
 <body>
-    <nav><b>NAVIGATION:</b><br>
-        <a href="index.html">Home</a> • 
-        <a href="books.html">The Books</a> • 
-        <a href="https://app.thestorygraph.com/profile/csalek">My StoryGraph</a></nav>
 
-<section>
-    <h1>The Best Books I've Read in 2022 (So Far)</h1>
-    <p>At the end of last year, I set a goal to read 75 books in 2022. Accompanying my goal was a "reading resolution" to try to read at least half an hour a day. Since most of my reading takes place in spurts — i.e. I'll read five books in a row and then not read for a month – I wanted to try to make my reading more consistent. As of this writing, I am behind on my goal (thanks, grad school!) but still intend to hit 75 books by December 31.</p>
-</section>
+  <div class="grid-container">
+      <div class="item1"><h1>The Best Books I've Read in 2022 (So Far)</h1></div>
 
-<section>
-<h2>The Books</h2>
-    <p>Of the books I've read so far this year, these are five of my favorites in no particular order. This year, I'm pleased to have read a greater diversity of types of books — that is, while I typically read exclusively young adult or graphic novels, I am reading much more nonfiction this year. I rated each book on a five-star scale, going to quarter stars if needed.</p>
-    <p>Here are five of the best books I've read in 2022 (so far):</p>
-    <ul>
-        <li><em>The Anthropocene Reviewed: Essays on a Human-Centered Planet</em>, by John Green <b>(4.5 out of 5 stars)</b></li>
-        <li><em>The Giver: The Graphic Novel</em>, adapted and illustrated by P. Craig Russell <b>(4.5 out of 5 stars)</b></li>
-        <li><em>When Breath Becomes Air</em>, by Paul Kalanithi <b>(4 out of 5 stars)</b></li>
-        <li><em>Loveless</em>, by Alice Oseman <b>(4.5 out of 5 stars)</b></li>
-        <li><em>We Are Never Meeting in Real Life.</em>, by Samantha Irby <b>(4.25 out of 5 stars)</b></li>
-    </ul>
-    <p>Read more about each book and see the covers <a href="books.html">by clicking here.</a></p>
-</section>
+      <div class="item2">
+        <nav><b>NAVIGATION</b><br><br>
+        <a href="index.html">Home</a><br> 
+        <a href="books.html">The Books</a><br>
+        <a href="https://app.thestorygraph.com/profile/csalek">My StoryGraph</a>
+        </nav>
+      </div>
 
+      <div class="item3">
+      <section>
+      <h2>Introduction</h2>
+        <p>At the end of last year, I set a goal to read 75 books in 2022. Accompanying my goal was a "reading resolution" to try to read at least half an hour a day. Since most of my reading takes place in spurts — i.e. I'll read five books in a row and then not read for a month – I wanted to try to make my reading more consistent. As of this writing, I am behind on my goal (thanks, grad school!) but still intend to hit 75 books by December 31.</p>
+      </section>
+      
+      <section>
+      <h2>The Books</h2>
+          <p>Of the books I've read so far this year, these are five of my favorites in no particular order. This year, I'm pleased to have read a greater diversity of types of books — that is, while I typically read exclusively young adult or graphic novels, I am reading much more nonfiction this year. I rated each book on a five-star scale, going to quarter stars if needed.</p>
+          <p>Here are five of the best books I've read in 2022 (so far):</p>
+          <ul>
+              <li><em>The Anthropocene Reviewed: Essays on a Human-Centered Planet</em>, by John Green <b>(4.5 out of 5 stars)</b></li>
+              <li><em>The Giver: The Graphic Novel</em>, adapted and illustrated by P. Craig Russell <b>(4.5 out of 5 stars)</b></li>
+              <li><em>When Breath Becomes Air</em>, by Paul Kalanithi <b>(4 out of 5 stars)</b></li>
+              <li><em>Loveless</em>, by Alice Oseman <b>(4.5 out of 5 stars)</b></li>
+              <li><em>We Are Never Meeting in Real Life.</em>, by Samantha Irby <b>(4.25 out of 5 stars)</b></li>
+          </ul>
+          <p>Read more about each book and see the covers <a href="books.html">by clicking here.</a></p>
+          </section>
+      </div>  
+    </div>
+    
 </body>
 
 </html>
