--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
       <div class="item1"><h1>The Best Books I've Read in 2022 (So Far)</h1></div>
 
       <div class="item2">
-        <nav><b>NAVIGATION</b><br><br>
-        <a href="index.html">Home</a><br> 
-        <a href="books.html">The Books</a><br>
+        <nav><a href="index.html">Home</a> | 
+        <a href="books.html">The Books</a> |
         <a href="https://app.thestorygraph.com/profile/csalek">My StoryGraph</a>
         </nav>
       </div>
