updated for assignment

--- a/books.html
+++ b/books.html
@@ -13,12 +13,11 @@
         <div class="item1"><h1>The Best Books I've Read in 2022 (So Far)</h1></div>
   
         <div class="item2">
-          <nav><b>NAVIGATION</b><br><br>
-          <a href="index.html">Home</a><br> 
-          <a href="books.html">The Books</a><br>
-          <a href="https://app.thestorygraph.com/profile/csalek">My StoryGraph</a>
-          </nav>
-        </div>
+            <nav><a href="index.html">Home</a> | 
+            <a href="books.html">The Books</a> |
+            <a href="https://app.thestorygraph.com/profile/csalek">My StoryGraph</a>
+            </nav>
+          </div>
   
         <div class="item3"><div class="flex-container">
     <div><h2>The Anthropocene Reviewed: Essays on a Human-Centered Planet</h2>
